@@ -152,6 +152,7 @@
               <argLine>
                 --add-opens com.azure.core.amqp/com.azure.core.amqp.implementation=ALL-UNNAMED
                 --add-opens com.azure.core.amqp/com.azure.core.amqp.implementation.handler=ALL-UNNAMED
+                --add-opens com.azure.core.amqp=ALL-UNNAMED
 
                 --add-reads com.azure.core.amqp=ALL-UNNAMED
               </argLine>
